test modifications, locks introduced
